<resources>
    <string name="app_name">D-Calculator</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">×</string>
    <string name="div">÷</string>
    <string name="equal">=</string>
    <string name="comma">.</string>
    <string name="clear">C</string>
    <string name="percent">%</string>
    <string name="plus_minus">+/-</string>
    <string name="parenthesis_1">(</string>
    <string name="parenthesis_2">)</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="type_num">number</string>
    <string name="type_cal">calculation</string>
    <string name="type_cle">clear</string>
    <string name="type_bac">backspace</string>
    <string name="type_set">setting</string>
    <string name="type_res">result</string>
    <string name="type_par">parenthesis</string>
    <string name="type_min">minus</string>
    <string name="type_com">comma</string>


    <!-- Advance calculation -->
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">number</string>
    <string name="cotg">number</string>


    <string name="pi">π</string>
    <string name="mathematical_constant">e</string>
    <string name="squared"><body>x<sub>2</sub></body></string>
    <string name="cubed">x^3</string>
    <string name="exponent">x^n</string>
    <string name="x_power_minus_1">x^-1</string>
    <!--<string name="sin">log</string>-->
    <!--<string name="sin">ln</string>-->
    <!--<string name="sin">log</string>-->
    <!--<string name="sin">number</string>-->
    <!--<string name="sin">number</string>-->
    <!--<string name="sin">number</string>-->
    <!--<string name="sin">number</string>-->

</resources>
